# FPL-Jubilee-Ascent

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  README.md  ROADMAP.md  pyproject.toml
.gemini/: settings.json
backend/: pyproject.toml
backend/app/: main.py
backend/app/clients/: fpl_api.py  fpl_auth.py
backend/tests/: integration_auth.py  integration_full_ingestion.py  integration_public_api.py  test_fpl_api.py  test_fpl_auth.py  test_main.py
clients/: env_loader.py  fpl_api.py  fpl_auth.py
commands/: backtest.py  refresh_data.py  report.py  run_model.py  snapshot_season.py  solve.py
data/archive/2025-26/processed/: clubs.parquet  (+4 more)
docs/: ROADMAP.md  data_dictionary.md
docs/adr/: 0001-add-scipy-dependency.md  0001-database-migrations-alembic.md  0001-projections-in-postgres.md  0002-custom-env-parser.md  0002-fpl-api-authentication-mechanism.md  0003-api-data-strategy-database-schema.md  0003-reconstruct-points-from-event-components.md
docs/agents/: current-state.md  domain.md  issue-tracker.md
docs/prds/: phase_1.md
features/: builder.py  processor.py
frontend/: package-lock.json
models/: __init__.py  base.py  component_baseline.py  linear_baseline.py  scoring_matrix.py
projections/: exporter.py
solver/: data_parser.py  paths.py  solver.py  utils.py  visualization.py
tests/: test_auth.py  test_backtest.py  test_build_features_rates.py  test_cold_start_seed.py  test_component_baseline.py  test_env_loader.py  test_model.py  test_processor.py  test_refresh_data.py  test_scoring_matrix.py  test_solve.py
tmp/: mp_h5_od_d0.85_MT9ut_0.mps
(+879 files in other folders)
